--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
 	This is a test. Matthew Coulter edited this section
 
+	Hey, I'm Carter Geerts.
+
 	This is hard. -Quinn Mchugh 
 </body>
 </html>
